[gd_scene load_steps=2 format=3 uid="uid://c6dne30w0384s"]

[ext_resource type="Script" uid="uid://c2oeigaxxtgbj" path="res://scoreboard.gd" id="1_1oo4x"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1oo4x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0.270588, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.012
anchor_bottom = 0.012
offset_left = 448.0
offset_top = 440.224
offset_right = 704.0
offset_bottom = 552.224

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="Try Again" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TRY AGAIN"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="TimeScore" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 55
text = "00:00:000"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Try Again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
